--- a/TODO
+++ b/TODO
@@ -5,4 +5,4 @@ Memcache por tag
 Integração com twitter (http://joshthecoder.github.com/tweepy/)
 Pingar Google Webmaster Tools sobre novo sitemap.xml
 Refatorar response como xml, json
-
+Colocar links do blog nas configurações
