--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 Paginar posts (usar offset ou cursor?)
-UI / Rich Editor BBCode
-BBcode render / strip html code before safe at database
+UI / Rich Editor BBCode / link to bbcode_help.html (bbcode help file)
 Memcache por tag
 Integração com twitter (http://joshthecoder.github.com/tweepy/)
 Pingar Google Webmaster Tools sobre novo sitemap.xml
