TODO: BUG task added

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+BUG >> tags starting/ending with blank spaces
+
 Paginar posts (usar offset ou cursor?)
 Memcache por tag
 Integração com twitter (http://joshthecoder.github.com/tweepy/)
