fixed a few bugs and xhtml syntax. also applied SEO title, description and keywords

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-BUG >> tags starting/ending with blank spaces
-
+Validar todas as páginas no próprio front-end 
 Paginar posts (usar offset ou cursor?)
 Memcache por tag
